# tg-webapp-test

./: .gitignore  package-lock.json  package.json  server.js
tg_bot/: pyproject.toml
tg_bot/tg_bot/: main.py
views/: index.html
