[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["locolemat <122878505+locolemat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.5"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
